OAK-11967: RDBDocumentStore: code cleanup